@@ -3,6 +3,7 @@
 - Fixed bug in updating type for holidays in basicwebaccess
 - Fixed bug in updating holiday instead of adding in basicwebaccess
 - Changed tag name to holidays in basicwebaccess instead of holiday
+- Fixed bug in RetainerMove
 
 [B]1.0.4[/B]
 - Fixed bug in reading table columns from db, may confuse people when using basicwebaccess
